@@ -1,3 +1,8 @@
+2005-06-03  Per Bothner  <per@bothner.com>
+
+	* LispLanguage.java (declFromField): New method, refines method
+	in Language by checking for Syntax.
+
 2005-05-06  Per Bothner  <per@bothner.com>
 
 	* ReadTable.java (current): Update ThreadLocation constructor call.
