@@ -1,3 +1,11 @@
+2005-06-03  Per Bothner  <per@bothner.com>
+
+	* Language.java (declFromField): New method.  Body taken from
+	ModuleInfo's makeDeclInModule1.
+	* ModuleInfo.java (setupModuleExp): Inline what's left of
+	makeDeclInModule1.
+	(makeDeclInModule1): Remove method.
+
 2005-06-02  Per Bothner  <per@bothner.com>
 
 	* FindCapturedVars.java (cpature): If we have a context, we don't
